<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/user_img"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="Your pp"
        android:layout_gravity="center"
        android:src="@drawable/pp_ph" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/primary">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/accent_transparency"
        android:gravity="center"
        android:text="@string/user_name_default"
        android:textColor="@color/text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/accent_transparency"
        android:gravity="center"
        android:text="@string/user_email_default"
        android:textColor="@color/text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_birthday"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/accent_transparency"
        android:gravity="center"
        android:text="@string/user_birthday_default"
        android:textColor="@color/text"
        android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>